# NDCSI4-2018

./: README.md  elements_abaqus_gmsh.xlsx  main_program.py  test_PyDSTool.py  testfile.txt
GeneralHBMContinuation/: .gitignore  AftBase.h  AftSimple.cpp  AftSimple.h  CMakeLists.txt  Config.cpp  Config.h  ContinuationSettings.h  ContinuationWrapper.cpp  ContinuationWrapper.h  Functions.cpp  Functions.h  Functions.hpp  FunctionsAlgebra.cpp  FunctionsAlgebra.h  MatrixDefinition.h  Misc.h  ProblemInterface.cpp  ProblemInterface.h  ProblemParams.h  TestingFunctions.cpp  TestingFunctions.h  Time.cpp  Time.h  main.cpp
GeneralHBMContinuation/Aft/: AftBase.h  AftFactory.h  AftFftw.cpp  AftFftw.h  AftSimple.cpp  AftSimple.h
GeneralHBMContinuation/CMakeLists_backup/: CMakeLists_jiri_laptop_ubuntu.txt  CMakeLists_siva_laptop.txt
GeneralHBMContinuation/DSBuilder/: DSBuilderBase.h  DSBuilderBlock.cpp  DSBuilderBlock.h  DSBuilderFactory.h  DSBuilderSimple.cpp  DSBuilderSimple.h
GeneralHBMContinuation/Nonlinearities/: CubicSpring.cpp  CubicSpring.h  FResult.h  FricElem1D.cpp  FricElem1D.h  FricElem3D.cpp  FricElem3D.h  JResult.h  NonlinearBase.cpp  NonlinearBase.h  NonlinearBaseFD.cpp  NonlinearBaseFD.h  NonlinearBaseH.cpp  NonlinearBaseH.h  NonlinearBaseTD.cpp  NonlinearBaseTD.h  NonlinearBaseTDHD.cpp  NonlinearBaseTDHD.h  NonlinearitiesFactory.h  NonlinearityDefinition.h  PenaltyWall.cpp  PenaltyWall.h
GeneralHBMContinuation/Test1DOF/: config  continuation_settings  damping  excitation
GeneralHBMContinuation/Test1DOF friction/: config  damping  excitation  mass  nonlinearities
GeneralHBMContinuation/Test2DOF/: config  damping  excitation  mass  stiffness
GeneralHBMContinuation/Tests/Test1DOF/: config  continuation_settings  damping  excitation  nonlinearities
GeneralHBMContinuation/Tests/Test1DOF blocks/: config  damping1  excitation
GeneralHBMContinuation/Tests/Test1DOF friction/: config  continuation_settings  damping  excitation  stiffness
GeneralHBMContinuation/Tests/Test1DOF friction/nonlinearities_files/: friction
GeneralHBMContinuation/Tests/Test1DOF wall/: config  continuation_settings  damping  excitation  nonlinearities
GeneralHBMContinuation/Tests/Test1DOF wall 2/: config  continuation_settings  damping  excitation
GeneralHBMContinuation/Tests/Test1DOF wall 2/nonlinearities_files/: wall
GeneralHBMContinuation/Tests/Test1DOF wall/nonlinearities_files/: wall
GeneralHBMContinuation/Tests/Test1DOF_cs_fric/: config
GeneralHBMContinuation/Tests/Test1DOF_cs_fric/nonlinearities_files/: cubic_spring  friction
GeneralHBMContinuation/Tests/Test2DOF/: config  continuation_settings  excitation  mass
Zeeshan Matlab Functions/: Example_Hysteresis.fig  Fric3Dcoup_Jac.m  FricElem2D.m  FricElem3D.m  FricElem3D2ts.m  FricElem3D2tsCoup.m  HarmIndexVector.m  JacobianExpressions.m  call_function_CHECK.m  myFFT.m  myInvFFT.m
cases/case_1/: create_gif.py
data/: IDmatrix.matrix  Kdense2.matrix  beampl.inp
data/abaqus_files/: abaqus.abaqus.fbc  simple_sector.fbc  simple_sector.prj  simple_sector.uns
data/ansys_simple_blade_disc_files/: Frequency_harm_1.txt  Frequency_harm_4.txt  Harm_1_mode1.txt  Harm_1_mode3.txt  Harm_1_mode4.txt  Harm_1_mode5.txt  Harm_2_mode1.txt  Harm_2_mode4.txt  Harm_2_mode5.txt  Harm_3_mode4.txt  Harm_3_mode6.txt  simple_sector.cgns.cgns  simple_sector.cgns.fbc  simple_sector.cgns.fbc_dfupdate  simple_sector.cgns.txt  simple_sector.cgns.uns
data/calculix_files/: stdrectblock_quadface_hexmesh.inp  stdrectblock_quadface_hexmesh_withprestressforce.frd  stdrectblock_quadface_hexmesh_withprestressforce.inp  stdrectblock_quadface_withhextet.inp  stdrectblock_withonlyquadsurfaces.inp
data/calculix_files_exportK_readinpython/: MESH.inp  read_abaqus_mesh.py  reading_inp.py  testing_input_matrix.py
data/calculix_simple_sector/: case_global.frd  case_global.inp  case_global.mas  case_global.sti  case_stress.dof  case_stress.frd  case_stress.inp  case_stress.mas  case_stress.sti  run_case.bat  run_case_stress.bat  simple_sector_mesh.inp
data/files/: interior_id.dof
data/icem_files/: abaqus.abaqus.fbc  abaqus.abaqus.par  disc_sector.prj  disc_sector.tin  nastran.atr  nastran.fbc  nastran.fbc_old  nastran.par  simple_sector.cgns  simple_sector.fbc  simple_sector.prj  (+6 more)
notebooks/: 3D mesh with abaqus.ipynb  Craig Bampton Component with selector operator.ipynb  Cyclic Craig-Bampton Reduction .ipynb  Cyclic Modal Analysis with Selector Operator.ipynb  Dirichlet B.C with the selector operator.ipynb  Foruier Series.ipynb  Imposing Dirichlet B.C..ipynb  Reading Ansys files to compare with AMfe.ipynb  cyclic symmetry.ipynb  local coordinate system.ipynb  test Craig Bampton Component.ipynb
test/: amfe_craig_bampton.py  craig_bampton.py  craig_bampton_simple_sector.py  cyclic_craig_bampton.py  cyclic_modal_analysis_using_inp.py  export_stiffness_mass_prestress_withoutstress_seperateKiiKbbusingDOF.py  f.pkl  find_normal_vector_to_node.py  import_stiffness_mass_dof_mat.py  modal_analysis_using_abaqus_inp.py  model_analysis_incyclic_structures.py  my_comp.pkl  perm_test.py  read_modeshapes_ansys.py  rotate_submesh.py  test Dirichlet BC.py  test_abaqus_file_with_amfe.py  test_cyclic_symmetry.py  test_inp_in_amfe.py  test_read_abaqus_module.py  test_selector_operator.py  testing_contact_elem.py
utils/: write.py  xml2dict.py
wrappers/: ansys_apdl_wrapper.py  dictionary_abaqus_gmsh.py  intro.py  openWB.bat  openWB_wbpj.bat  openfile.wbjn  pyAnsys.py  read_abaqus_matrix.py  read_abaqus_mesh.py  runIntro.bat  test.wbjn
(+180 files in other folders)
